Melhorando interface web

--- a/sisrec-web/index.html
+++ b/sisrec-web/index.html
@@ -35,6 +35,9 @@
 
 				</ul>
 			</div>
+			<div class="game">
+				
+			</div>
 			<div class="similar">
 				<h3>Jogos Parecidos</h3>
 				<ul class="similar-list">
